# visual_error_correction

./: .gitignore  .gitmodules  pyproject.toml
examples_notebooks/: __init__.py  groundingdio_sam_segment.ipynb  semantic_sam.ipynb
visual_error_correction/: __init__.py
visual_error_correction/config/: __init__.py
visual_error_correction/modeling/: __init__.py
