[tool.poetry]
name = "visual_error_correction"
version = "0.0.1"
description = ""
authors = [
    "Watcher"
]

license = "MIT"
readme = "README.md"
packages = [{include="visual_error_correction"}]



[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"


